--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -7,7 +7,6 @@
   align-items: center;
 }
 #homeCircles {
-  border: 1px solid #333;
   height: 50%;
   width: 2em;
   display: flex;
@@ -24,7 +23,6 @@
 #homeText {
   width: 30em;
   height: 80%;
-  border: 1px solid #333;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -49,9 +47,26 @@
   transform: scale(1.05);
 }
 #homeImage {
-  border: 1px solid #333;
-  width: 20em;
+  width: 25em;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#homeImage #price {
+  z-index: 0;
+  width: 10em;
+  height: 20%;
+  -webkit-user-drag: none;
+  position: absolute;
+  right: 30%;
+}
+#homeImage #product {
+  z-index: 1;
+  -webkit-user-drag: none;
+  width: 30em;
+  height: 25em;
 }
 
 /*  */
@@ -69,7 +84,6 @@
     align-items: center;
   }
   #homeCircles {
-    border: 1px solid #333;
     height: 5%;
     width: 50%;
     display: flex;
@@ -80,11 +94,24 @@
   #homeText {
     width: 100%;
     height: 45%;
-    border: 1px solid #333;
   }
   #homeImage {
-    border: 1px solid #333;
     width: 100%;
     height: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #homeImage #price {
+    width: 10em;
+    height: 20%;
+    -webkit-user-drag: none;
+    display: none;
+  }
+  #homeImage #product {
+    -webkit-user-drag: none;
+    width: 30em;
+    height: 25em;
   }
 }
