--- a/src/CSS/slider.css
+++ b/src/CSS/slider.css
@@ -1,4 +1,64 @@
-#slider{
-    border: 1px solid #333;
-    height: 10em;
+#slider {
+  height: 8em;
+  margin-top: 1%;
+  width: 95vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  overflow: hidden;
+  background-color: #f2f3f5;
+}
+#innerSliderContainer {
+  width: 25%;
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#innerSliderContainer img {
+  width: 4em;
+  height: 4em;
+  border-radius: 100%;
+  -webkit-user-drag: none;
+}
+#innerSliderContainer #innerSliderText {
+  width: 70%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+#innerSliderContainer #innerSliderText h4 {
+  color: #1e1e1e;
+  font-size: 1.1em;
+  font-weight: 700;
+}
+#innerSliderContainer #innerSliderText p {
+  color: #1e1e1e;
+  font-size: 0.8em;
+  font-weight: 600;
+}
+/*  */
+/*  */
+/* Screens lower than 1000px */
+@media (max-width: 1000px) {
+  #slider {
+    height: 30em;
+    margin-top: 1%;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #innerSliderContainer {
+    width: 90%;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
