--- a/src/CSS/deals.css
+++ b/src/CSS/deals.css
@@ -1,7 +1,6 @@
 #deals {
   width: 95vw;
-  height: 20em;
-  border: 1px solid #333;
+  height: 22em;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -32,12 +31,75 @@
   border-radius: 3px;
   border-top: 6px solid #0467fb;
   background-color: #dde9fb;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#topDealsDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+#topDealsDiv h6 {
+  color: #1e1e1e;
+  font-weight: 700;
+}
+#topDealsDiv h6 span {
+  color: #df1618;
+  font-weight: 700;
+}
+#middleDealsDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#middleDealsText {
+  height: 50%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#normalDealsText {
+  font-size: 1.4em;
+  color: #1e1e1e;
+  font-weight: 700;
+}
+#boldDealsText {
+  font-size: 1em;
+  color: #1e1e1e;
+  font-weight: 700;
+}
+#boldDealsText span {
+  color: #df1618;
+  font-size: 1.4em;
+  font-weight: 700;
+}
+#middleDealsImage {
+  height: 90%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#middleDealsImage img {
+  -webkit-user-drag: none;
+  width: 15em;
+  height: 15em;
 }
 
+/*  */
+/*  */
+/* Screens lower than 768px */
 @media (max-width: 768px) {
   #deals {
     width: 100%;
-    height: 50em;
+    height: 70em;
     border: 1px solid #333;
     display: flex;
     flex-direction: column;
@@ -69,5 +131,36 @@
     font-size: 0.9em;
     text-decoration: none;
     color: #7d7d7d;
+  }
+  #middleDealsDiv {
+    border: 1px solid #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80%;
+  }
+  #middleDealsText {
+    height: 50%;
+    width: 100%;
+    border: 1px solid #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #middleDealsImage {
+    border: 1px solid #333;
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #middleDealsImage img {
+    -webkit-user-drag: none;
+    width: 15em;
+    height: 15em;
   }
 }
