--- a/src/CSS/popularViews.css
+++ b/src/CSS/popularViews.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
-*{
-    font-family: 'Poppins', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
 }
 #popularViews {
   border: 1px solid #333;
@@ -12,12 +12,80 @@
   justify-content: space-evenly;
   align-items: center;
 }
-#topViewsDiv{
-    height: 3em;
-    border: 1px solid #333;
+#topViewsDiv {
+  height: 3em;
+  border: 1px solid #333;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
 }
-#topViewsDiv h1{
-    color: #1e1e1e;
-    font-size: 2em;
-    font-weight: 700;
+#topViewsDiv h1 {
+  color: #1e1e1e;
+  font-size: 2em;
+  font-weight: 700;
+}
+#popularProducts {
+  height: 20em;
+  border: 1px solid #333;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#item {
+  width: 20%;
+  height: 90%;
+  background-color: #f2f3f5;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#item img {
+  width: auto;
+  height: 40%;
+  -webkit-user-drag: none;
+}
+#item #itemText {
+  height: 30%;
+  border: 1px solid #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+#item #itemText p {
+  color: #7d7d7d;
+  font-size: 0.8em;
+}
+#item #itemText h6 {
+  color: #1e1e1e;
+  font-size: 1.1em;
+  font-weight: 600;
+}
+#review {
+  height: 10%;
+  width: 100%;
+  border: 1px solid #333;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+}
+#review p {
+  color: #7d7d7d;
+  font-size: 0.8em;
+}
+#star {
+  width: 50%;
+  height: 100%;
+  border: 1px solid #333;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#star i {
+  color: #ffc118;
 }
