--- a/src/CSS/popularViews.css
+++ b/src/CSS/popularViews.css
@@ -4,7 +4,7 @@
   font-family: "Poppins", sans-serif;
 }
 #popularViews {
-  height: 80em;
+  height: 60em;
   margin-top: 3%;
   display: flex;
   flex-direction: column;
@@ -25,15 +25,14 @@
   font-weight: 700;
 }
 #popularProducts {
-  height: 22em;
-  border: 1px solid #333;
+  height: 25em;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
 #item {
-  width: 20%;
+  width: 22%;
   height: 90%;
   background-color: #f2f3f5;
   border-radius: 5px;
@@ -41,6 +40,8 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  padding: 0;
+  /* margin: 0; */
 }
 #item img {
   width: auto;
@@ -48,7 +49,7 @@
   -webkit-user-drag: none;
 }
 #item #itemText {
-  height: 30%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -95,8 +96,29 @@
 }
 #popularPriceDiv h3 {
   color: #1e1e1e;
-  font-size: 1.3em;
+  font-size: 1.1em;
   font-weight: 700;
+  margin: auto;
+}
+#freeDeliveryDiv {
+  height: 5%;
+  padding: 0;
+}
+#innerFreeDelivery {
+  height: 100%;
+  width: 50%;
+  margin-right: 100%;
+  border-top-left-radius: 5px;
+  background-color: #e01717;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#innerFreeDelivery h6 {
+  color: #ffffff;
+  font-size: 0.8em;
+  margin: auto;
 }
 
 /* Screens from 768px to 1025px */
@@ -157,14 +179,18 @@
     text-align: center;
     margin: auto;
   }
-  #star {
-    width: auto;
-    height: 100%;
+  #popularPriceDiv {
+    height: 10%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #333;
+  }
+  #popularPriceDiv h3 {
+    color: #1e1e1e;
+    font-size: 2em;
+    font-weight: 700;
+    margin: auto;
   }
 }
 
