--- a/src/CSS/footer.css
+++ b/src/CSS/footer.css
@@ -1,5 +1,5 @@
 #footer {
-  height: 20em;
+  height: 25em;
   width: 95vw;
   margin-top: 5%;
   border-radius: 5px;
@@ -15,12 +15,10 @@
   justify-content: space-evenly;
   align-items: center;
   height: 80%;
-  border: 1px solid #333;
 }
 #innerFooterLinks {
   width: 20%;
-  height: 100%;
-  border: 1px solid #333;
+  height: 80%;
   display: flex;
   flex-direction: column;
 }
@@ -36,7 +34,6 @@
   font-size: 0.8em;
 }
 #footerIcons {
-  border: 1px solid #333;
   height: 10%;
   margin-top: 25%;
   display: flex;
@@ -48,14 +45,68 @@
   color: #7d7d7d;
   font-size: 1.3em;
 }
+#footer hr {
+  background-color: #7d7d7d;
+  height: 2px;
+  width: 95vw;
+}
+#copyright {
+  color: #7d7d7d;
+  font-size: 0.8em;
+}
 
-
-
-
-
-
-
-
+/* Screens from 768px to 1025px */
+@media screen and (min-width: 768px) and (max-width: 1025px) {
+  #footer {
+    height: 140em;
+    width: 95vw;
+    margin-top: 5%;
+    border-radius: 5px;
+    background-color: #f8e8e7;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #footerLinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+  }
+  #innerFooterLinks {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #innerFooterLinks h4 {
+    color: #1e1e1e;
+    font-size: 2em;
+    font-weight: 700;
+  }
+  #innerFooterLinks a {
+    text-decoration: none;
+    color: #7d7d7d;
+    margin-top: 8%;
+    font-size: 1.3em;
+  }
+  #footerIcons {
+    height: auto;
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #footerIcons i {
+    color: #7d7d7d;
+    font-size: 2em;
+  }
+}
 
 /* Screens lower than 767px */
 @media (max-width: 767px) {
@@ -76,12 +127,10 @@
     justify-content: space-evenly;
     align-items: center;
     height: 90%;
-    border: 1px solid #333;
   }
   #innerFooterLinks {
     width: 100%;
     height: 20%;
-    border: 1px solid #333;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
