--- a/src/CSS/deals.css
+++ b/src/CSS/deals.css
@@ -6,6 +6,7 @@
   justify-content: space-evenly;
   align-items: center;
   margin-top: 3%;
+  overflow-x: hidden;
 }
 #dealsDropdown {
   width: 20%;
