--- a/src/CSS/footer.css
+++ b/src/CSS/footer.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  overflow-x: hidden;
 }
 #footerLinks {
   display: flex;
