--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -5,6 +5,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  overflow-x: hidden;
 }
 #homeCircles {
   height: 50%;
