--- a/src/CSS/popularViews.css
+++ b/src/CSS/popularViews.css
@@ -10,6 +10,8 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  overflow-x: hidden !important;
+  overflow-y: auto;
 }
 #topViewsDiv {
   height: 3em;
@@ -18,6 +20,7 @@
   justify-content: start;
   align-items: center;
   width: 95vw;
+  overflow-x: hidden;
 }
 #topViewsDiv h1 {
   color: #1e1e1e;
@@ -30,6 +33,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  overflow-x: hidden;
 }
 #item {
   width: 22%;
@@ -41,7 +45,7 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 0;
-  /* margin: 0; */
+ overflow-x: hidden;
 }
 #item img {
   width: auto;
@@ -103,6 +107,7 @@
 #freeDeliveryDiv {
   height: 5%;
   padding: 0;
+  overflow-x: hidden;
 }
 #innerFreeDelivery {
   height: 100%;
@@ -225,6 +230,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
   #topViewsDiv {
     height: auto;
@@ -380,6 +387,7 @@
 @media (max-width: 767px) {
   #popularViews {
     height: 500em;
+    width: 100vw;
     margin-top: 3%;
     display: flex;
     flex-direction: column;
