--- a/src/CSS/subscribe.css
+++ b/src/CSS/subscribe.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  overflow-x: hidden
 }
 #subscribeTop h6 {
   color: #1e1e1e;
@@ -86,7 +87,7 @@
 @media (max-width: 767px) {
   #subscribe {
     height: 70em;
-
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
