--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   overflow-x: hidden;
   background-color: #fbfbfb;
-  padding: 1em;
+  padding:0;
 }
 #navbar {
   width: 100vw;
@@ -102,6 +102,8 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding-left: 0;
+    padding-right: 0;
   }
   #separationOne {
     width: 100%;
@@ -144,11 +146,16 @@ body {
   }
   #innerSeparationTwoHiddenIcons {
     display: initial;
+    width: 100%;
     height: 4em;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    border: 1px solid #333;
+  }
+  #innerSeparationTwoHiddenIcons input{
+    width: 70%;
   }
   #innerSeparationTwoHiddenIcons i {
     font-size: 1.1em;
