--- a/src/CSS/popularViews.css
+++ b/src/CSS/popularViews.css
@@ -393,6 +393,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    padding: 0;
   }
   #topViewsDiv {
     height: auto;
