--- a/src/CSS/subscribe.css
+++ b/src/CSS/subscribe.css
@@ -92,6 +92,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    padding: 0;
   }
   #innerSubscribe {
     height: 100%;
