--- a/src/CSS/popularViews.css
+++ b/src/CSS/popularViews.css
@@ -107,7 +107,7 @@
 #freeDeliveryDiv {
   height: 5%;
   padding: 0;
-  overflow-x: hidden;
+  /* overflow: hidden; */
 }
 #innerFreeDelivery {
   height: 100%;
